# bsdiff-binding

./: .gitignore  BSDiff.podspec  CMakeLists.txt  Gemfile  LICENSE  Package.swift  README.md  settings.gradle.kts
bsdiff/: CMakeLists.txt  bsdiff.c  bsdiff_main.c  bserr.h  bspatch.c  bspatch_main.c
bsdiff-android/: build.gradle.kts
bsdiff-android/src/main/: AndroidManifest.xml
bsdiff-android/src/main/c/: CMakeLists.txt  jni.c
bsdiff-android/src/main/java/com/shsuco/android/bsdiff/: BSDiff.java
bsdiff-cpp/include/: bsdiff.hpp
bsdiff-jni/: build.gradle.kts
bsdiff-jni/src/main/c/: CMakeLists.txt  jni.c
bsdiff-jni/src/main/java/com/shsuco/bsdiff/: BSDiff.java
bsdiff-jni/src/main/resources/libs/aarch64-darwin/: libbsdiff.dylib
bsdiff-objc/: BSDiff.m
bsdiff-objc/include/: BSDiffObjc.h
bsdiff-swift/Sources/BSDiff/: BSDiff.swift
bsdiff-swift/Tests/BSDiffTests/: BSDiffTests.swift
bsdiff/include/: bsdiff.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
